# advent

./: README.md  advent.cabal  hie.yaml  stack.yaml  test.pl
clj-advent/: CHANGELOG.md  README.md  project.clj
clj-advent/src/clj_advent/: core.clj  day2.clj  day3.clj
src/: Main.hs
src/2018/DayEighteen/: Puzzle.hs
src/2018/DayFifteen/: Puzzle.hs
src/2018/DayFour/: Puzzle.hs
src/2018/DayFourteen/: Puzzle.hs
src/2018/DayOne/: Puzzle.hs
src/2018/DaySixteen/: Puzzle.hs
src/2018/DayTwentyTwo/: Puzzle.hs
src/2019/DayEight/: Puzzle.hs
src/2019/DayEleven/: Puzzle.hs
src/2019/DayFive/: Puzzle.hs
src/2019/DayNine/: Puzzle.hs
src/2019/DaySeven/: Puzzle.hs
src/2019/DayThree/: Puzzle.hs
src/2019/DayTwo/: Puzzle.hs
src/2020/DayEight/: Puzzle.hs
src/2020/DayNine/: Puzzle.hs
src/2020/DaySeven/: Puzzle.hs
src/2020/DaySix/: Puzzle.hs
src/2021/DayEight/: Puzzle.hs
src/2021/DayEleven/: Puzzle.hs
src/2021/DayFive/: Puzzle.hs
src/2021/DayFourteen/: Puzzle.hs
src/2021/DayNine/: Puzzle.hs
src/2021/DayOne/: Puzzle.hs  Puzzle.pl
src/DayEight/: Puzzle.hs
src/DayEighteen/: Puzzle.hs
src/DayEleven/: Puzzle.hs
src/DayFifteen/: Puzzle.hs
src/DayFive/: Puzzle.hs
src/DayFour/: Puzzle.hs
src/DayFourteen/: Puzzle.hs
src/DayNine/: Puzzle.hs
src/DayOne/: Puzzle.hs
src/DaySeven/: Puzzle.hs  test.py
src/DaySix/: Puzzle.hs
src/DaySixteen/: Puzzle.hs
src/DayTen/: Puzzle.hs
src/DayThirteen/: Puzzle.hs
src/DayThree/: Puzzle.hs  data3.txt
src/DayTwelve/: Puzzle.hs
src/DayTwentyTwo/: Puzzle.hs
src/DayTwo/: Puzzle.hs
(+16 files in other folders)
