name:                advent
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , trifecta ==2
                     , parsers
                     , containers
                     , raw-strings-qq
                     , vector
                     , lens
                     , deepseq
                     , array
                     , parallel
                     , stm
                     , holmes
